--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,12 @@
                 <artifactId>wechatpay-apache-httpclient</artifactId>
                 <version>0.4.8</version>
             </dependency>
+
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>5.8.16</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
