--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -14,6 +14,7 @@ spring:
       password: ${sky.datasource.password}
 
 mybatis-plus:
+  mapper-locations: classpath*:com/sky/mapper/*.xml
   configuration:
     # 日志
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
